# sqlite_webpanel

./: .gitignore  LICENSE  MAINFEST.in  README.md  codemap.md  pyproject.toml  test_app.py
example/: dbview.py  example.py  test.py
src/sqlite_webpanel/: __init__.py  db.py  mount.py  renderers.py  router.py
src/sqlite_webpanel/static/: panel.css  panel.js
src/sqlite_webpanel/templates/: base.html  empty.html  redirect.html  row_detail.html  table.html
src/sqlite_webpanel/templates/partials/: rows.html
tests/: test_db.py  test_renderers.py  test_router.py
